# cov-test

src/: CMakeLists.txt
test/: CMakeLists.txt
test2/: CMakeLists.txt
